<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <!-- Top rectangle -->
        <View
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_rectangle"
            android:layout_gravity="top|start"/>

        <!-- Bottom curved rectangle -->
        <View
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="85dp"
            android:background="@drawable/bottom_rounded_rectangle" />


        <!-- Ellipse2 -->
        <View
            android:id="@+id/ellipse_2"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="350dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:background="@drawable/ellipse_2"
            />

        <!-- Ellipse1-->
        <View
            android:id="@+id/ellipse_1"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="280dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="89dp"
            android:background="@drawable/ellipse_1"
            />

        <!-- Card detials TextView-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_details_text"
            android:textAppearance="@style/homeStyle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal|top"
            />

        <!-- Edit icon-->
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginRight="55dp"
            android:src="@drawable/ic_edit"
            android:background="@null"
            />

        <!-- Delete icon -->

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_delete"
            android:background="@null"
            />

        <!-- Cover image ImageView-->

        <ImageView
            android:id="@+id/rectangle_5"
            android:layout_width="296dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/credit_card_view"
            />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="296dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center">

            <!-- Card type (Debit/Credit)-->

            <TextView
                android:id="@+id/creditCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[Credit/Debit]"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                />

            <!-- Card type (Visa/Mastercard)-->

            <TextView
                android:id="@+id/cardTypeTextView"
                android:layout_toRightOf="@+id/creditCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[Visa/Mastercard/Bank]"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/white"
                />

            <!-- Credit card number TextView-->

            <TextView
                android:id="@+id/creditCardNumberTextView"
                android:layout_below="@+id/creditCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="[Credit card number]"
                android:textColor="@color/white" />

            <!-- Expiration date text TextView -->

            <TextView
                android:id="@+id/expirationDateTextView"
                android:layout_below="@id/creditCardNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/expiration_date_text"
                android:textColor="@color/white" />


            <!-- Expiration date TextView -->

            <TextView
                android:id="@+id/actualExpirationDateTextView"
                android:layout_below="@id/expirationDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="[Expiration Date]"
                android:textColor="@color/white" />

        </RelativeLayout>
    </FrameLayout>



    <!--  My activity TextView -->

    <TextView
        android:layout_below="@+id/frameLayout1"
        android:id="@+id/my_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/my_activity"
        android:textAppearance="@style/my_activity"
        android:gravity="center_horizontal|top"
        />


    <!-- View all TextView -->
    <TextView
        android:id="@+id/view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/my_activity"
        android:layout_below="@+id/frameLayout1"
        android:text="@string/view_all"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="200dp"
        android:textAppearance="@style/view_all"
        />


    <!-- Transactions view -->

    <View
        android:id="@+id/rectangle_6"
        android:layout_below="@+id/my_activity"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_activity_view">

    </View>

    <!-- Transactions ListView -->

    <ListView
        android:id="@+id/activityListView"
        android:layout_below="@+id/my_activity"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_height="295dp" />







</RelativeLayout>