<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <!-- Top rectangle -->
        <View
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_rectangle"
            android:layout_gravity="top|start"/>

        <!-- Bottom curved rectangle -->
        <View
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="85dp"
            android:background="@drawable/bottom_rounded_rectangle" />


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/editProfileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/profile_picture_ellipse"
            android:layout_gravity="center"
            />


        <!-- Home TextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textAppearance="@style/homeStyle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal|top"
            />


        <!-- Ellipse2 -->
        <View
            android:id="@+id/ellipse_2"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="350dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:background="@drawable/ellipse_2"
            />

        <!-- Ellipse1-->
        <View
            android:id="@+id/ellipse_1"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="280dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="89dp"
            android:background="@drawable/ellipse_1"
            />
    </FrameLayout>

    <!-- Profile information view-->

    <View
        android:layout_below="@+id/frameLayout"
        android:id="@+id/rectangle_7"
        android:layout_width="331dp"
        android:layout_height="433dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/profile_info_bg"
        />



    <LinearLayout
        android:layout_below="@+id/frameLayout"
        android:layout_width="331dp"
        android:layout_height="433dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <!-- First name text TextView-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_text"
            android:layout_margin="15dp"
            android:textAppearance="@style/profile_info_style"
            />

        <!-- First name TextView-->

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="First name"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/profile_info_style"
            />

        <!-- Line divider-->

        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider_line"
            />


        <!-- Last name text TextView-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_text"
            android:layout_margin="15dp"
            android:textAppearance="@style/profile_info_style"
            />

        <!-- Last name TextView-->

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Last name"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/profile_info_style"
            />


        <!-- Line divider-->

        <View
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider_line"
            />



        <!-- Email address text TextView-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_text"
            android:layout_margin="15dp"
            android:textAppearance="@style/profile_info_style"
            />

        <!-- Email address TextView-->

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Email address"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/profile_info_style"
            />

        <!-- Line divider-->

        <View
            android:id="@+id/line_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider_line"
            />

        <!-- Change password button-->

        <android.widget.Button
            android:id="@+id/saveProfile"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/gradient_purple"
            android:text="Save Changes"

            android:textColor="@color/white" />




    </LinearLayout>

    <RelativeLayout
        android:layout_width="420dp"
        android:layout_height="750dp">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="180dp"
            android:indeterminateTint="@color/gradient_purple"
            android:visibility="invisible"
            android:layout_below="@+id/editProfileImgButton"
            />

        <ImageButton
            android:id="@+id/editProfileImgButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="105dp"
            android:layout_marginLeft="220dp"
            android:background="@null"
            android:src="@drawable/ic_camera" />



    </RelativeLayout>

</RelativeLayout>